Fixed the flex box spacing issue

--- a/src/styles/components/clips.scss
+++ b/src/styles/components/clips.scss
@@ -5,16 +5,20 @@
 
 .clip-images {
 	display: flex;
-	// justify-content: space-between;
+	justify-content: space-between;
 	flex-wrap: wrap;
 	// align-content: flex-start;
 	// align-items: flex-start;
 	// justify-items: flex-start;
-	
+
+	.clip-space-filler {
+		width: 320px;
+		height: 0;
+	}
 
 	.clip-card {
 		position: relative;
-		margin-right: 40px;
+		// margin-right: 20px;
 
 		.clip-card-indicator {
 			width: 20px;
@@ -76,16 +80,14 @@
 			&.dim {
 				opacity: 0.3;
 			}
-	
+
 			&:hover {
 				cursor: pointer;
 				box-shadow: 2px 2px 10px #c009c0;
-
 			}
 		}
-
 	}
-	.clip-card:hover{
+	.clip-card:hover {
 		.hidden-clip-options {
 			display: block;
 		}
@@ -110,8 +112,8 @@
 			width: 200px;
 			margin: 0;
 		}
-		button:first-of-type {
-			margin-right: 20px
-		}
+		// button:first-of-type {
+		// 	margin-right: 20px;
+		// }
 	}
 }
