--- a/src/styles/views/admin.scss
+++ b/src/styles/views/admin.scss
@@ -42,7 +42,7 @@
         .admin-outlet-container {
             // border: 1px solid steelblue;
             width: 88%;
-            padding: 20px;
+            padding: 20px 20px 20px 40px;
         }
     }
 
